<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/coordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="?actionBarSize"
            android:layout_width="match_parent"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetEnd="0dp">
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/title_trending"
                android:layout_gravity="center"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swiperefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"/>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        <TextView
            android:id="@+id/titleEmptyState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_empty_state"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/descEmptyState"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/img_no_internet_connection"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/titleEmptyState"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:contentDescription="@string/cd_image_empty_state"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/imgEmptyState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_empty_state"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/titleEmptyState"
            android:layout_marginTop="@dimen/spacing_small"
            android:textColor="#757575"
            android:visibility="gone"/>
        <Button
            android:id="@+id/btnRefresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bg_button_normal"
            android:text="@string/btn_retry"
            android:textColor="@color/cool_green"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:layout_marginBottom="@dimen/spacing_large"
            android:visibility="gone"/>
        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:indeterminateDrawable="@drawable/circular_progress_bar"/>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>